# NTKCAP-public

./: .gitattributes  .gitignore  .gitmodules  1.23.5  CAMERA_INTEGRATION_SUMMARY.md  NTKCAP_GUI.py  NTKCAP_GUI.ui  NTKCAP_GUI_dec.ui  NTKCAP_Run.bat  NTKCAP_rt_test.py  NTKCAP_rt_test.ui  NTKCAP_rt_test_v1.py  NTKCAP_rt_test_v2.py  NTKCAP_rt_test_v3.py  NTKCAP_rt_test_v4.py  NTKCAP_rt_test_v5_buffer20.py  NTKCAP_rt_test_v6_syncfirst.py  NTKCAP_rt_test_v6_syncfirst_2frames.py  NTKCAP_v1.py  NTKCAP_v2.py  NTKCAP_v3.py  NTKCAP_v4_1.py  NTKCAP_v5_press.py  NTKCAP_v5_press_v1.py  README_multicam.md  REMOTE_CALCULATION_README.md  activate.sh  activate_ntkcap.ps1  add_layout_temp.py  analyze_emg_data.py  boundary_GUI.py  build_engines.sh  camera_process.py  chessboard_corners.txt  cloud_test.py  combined_fields.json  combined_fields_with_id.json  conda_env_setup.bat  create_black_video.py  diagnose_ae400.py  (+36 more)
GUI_source/: CameraProcess.py  LabelClickable.py  NTKCAP_GUI_Boundary.ui  NTKCAP_GUI_dec.ui  TrackerProcess.py  UpdateThread.py  VideoPlayer.py  boundary_GUI.py  match_multi_GUI.py
GUI_source/DevelopVersion/: NTKCAP_rt_test_v6_syncfirst.py  m_test.py  real_time_test.py  real_time_testmod.py  triangulation.py  triangulation_fastver1.py
GUI_source/PreviousVersion/: NTKCAP_GUI.ui  NTKCAP_v4.py
NTK_CAP/script_py/: AlphaPose_to_OpenPose.py  NTK_Cap.py  NTK_Cap_back.py  NTK_Cap_camera_setup.py  NTK_Cap_multi.py  calib_yml_to_toml.py  call.py  cloud_function.py  convert_gltf.py  detect.py  emg_localhost.py  full_process.py  function_b.py  gait_analysis.py  kivy_file_chooser.py  manual_segment.py  opensim_visual_test.py  temp_gltf.py  test.py  test_camera_sync.py  test_emg_with_events.csv  test_gltf.py
NTK_CAP/script_py/NTK_CAP_halpe26/: NTK_Cap_halpe26.py  calibration_utils.py  camera_utils.py  opensim_xml_updater.py  pose_estimation.py  processing_utils.py  video_processing.py
NTK_CAP/script_py/cloud/: call.py  client_4.py
NTK_CAP/script_py/cloud/gltfConverter/: gltfConverter.pyi
NTK_CAP/script_py/gltf-converter/: osimViewport.py
NTK_CAP/script_py/gltf-converter 1/gltf-converter/: compile_all.sh
NTK_CAP/script_py/gltf-converter/src/: Model_Pose2Sim_Halpe26_scaled.gltf  call.py  gltf_converter.py
NTK_CAP/script_py/osimConverters/: DecorativeGeometryImplementationGltf.py  convertOsim2Gltf.py
NTK_CAP/script_py/test_EMG/: EMG_Integration_Guide.md  analyze_10hz_sine_wave.py  plot_emg_channel5.py  test_emg_websocket.py  test_emg_with_events.csv
NTK_CAP/template/Empty_project/User/: Config.toml
Patient_data/Patient_ID/2024_05_07/2024_06_02_14_47_calculated/: upload.conf
Patient_data/Patient_ID/2024_05_07/raw_data/: Meet_note.json  meetId.json
Pose2Sim/: Pose2Sim.py  Sort_people_visualize.py  associate_choose_comb_testver1.py  common.py  common_multi.py  draw_camera.py  filtering.py  filtering_multi.py  movement_20_joint_frames_fifth_person.json  movement_20_joint_frames_first_person_with_swing.json  movement_20_joint_frames_fourth_person.json  movement_20_joint_frames_second_person.json  movement_20_joint_frames_third_person_fixed.json  personAssociation_multi.py  personAssociation_multi_fastver1.py  personAssociation_multi_prever.py  reid.py  sort_people_ver2.py  temp.py  test.py  triangulation.py  triangulation_ThreeCamROWV.py  triangulation_ThreeCamWeight.py  triangulation_fastver1.py  triangulation_gpum.py  triangulation_multi.py  triangulation_multi_prever.py
Pose2Sim/Utilities/: AlphaPose_to_OpenPose.py  Blazepose_runsave.py  DLC_to_OpenPose.py
RT/: CameraProcess.py  NTKCAP_rt_test.ui  PreTri_Process.py  SyncProcess.py  Tracker_Process.py  Triangulation.py  Triangulation_cudastream.py  UpdateThread.py  real_time_testmod.py  test.py
calibration/: Calib.toml  cali_time.txt  calib_time.txt  err_value.txt
calibration/ExtrinsicCalibration/: extri.yml
calibration/ExtrinsicCalibration/chessboard/1/: 000000.json  000001.json  000002.json  000003.json  000004.json  000005.json  000006.json  000007.json  000008.json  000009.json
calibration/ExtrinsicCalibration/chessboard/2/: 000000.json  000001.json  000002.json  000003.json  000004.json  000005.json  000006.json  000007.json  000008.json  000009.json
calibration/ExtrinsicCalibration/chessboard/3/: 000000.json  000001.json  000002.json  000003.json  000004.json  000005.json  000006.json  (+3 more)
calibration_old/: Calib.toml  err_value.txt
calibration_old/ExtrinsicCalibration/: extri.yml
cnimes_RT/: check_cygnus_kernel.py  realtime_emg_grap.py  realtime_emg_minimal.py  realtime_emg_plot.py  realtime_emg_plot_fixed.py
config/: actionnote_layout.json  calculation_example.json  config.json  layout.json  layout_temp.json  location.json  meetnote_layout.json  remote_server_example.json  temp.json  temp_layout.json
docs/: laptop_v_merge_notes.md
git-hooks/: pre-commit
icd10/: GUI.py  GUI_text.py  layout.json  layout1.json  output_results.json  read_laout.py  search.py  sql_save.py
icd10/Noto_Sans_HK/: read_lyout.py
install/: .gitignore  AUDIT_REPORT.md  PROBLEMS_AND_SOLUTIONS.md  README.md  activate_ntkcap.ps1  activate_ntkcap.sh  environment.yml  install_ntkcap.sh  master_install.sh  ntkins.sh  setup.sh
install/scripts/: README_setup.md  fix_encoding.ps1  setup.ps1  setup.sh  setup_conda_path.ps1  setup_linux.sh  test_cuda.sh  test_installation.sh  windows_cuda_vs_version_handle.ps1
install/tests/: test.py  test_webengine.py
(+11194 files in other folders)
